--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/be/vdab/servlets/HeadersServlet.java=UTF-8
 encoding//src/be/vdab/servlets/IdentificatieServlet.java=UTF-8
+encoding//src/be/vdab/servlets/PizzaBestellenServlet.java=UTF-8
