--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,8 +4,8 @@
     <param-name>emailAdresWebMaster</param-name>
     <param-value>mbsmits.vdab@gmail.com</param-value>
   </context-param>
-  <session-config>     
-   <session-timeout>20</session-timeout>   <!-- 20 minuten -->   
-   <tracking-mode>COOKIE</tracking-mode> 
-  </session-config> 
+  <session-config>
+    <session-timeout>20</session-timeout>
+    <tracking-mode>COOKIE</tracking-mode>
+  </session-config>
 </web-app>
